--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "devDependencies": {
     "grunt": "0.4.1",
+    "grunt-jslint":"0.2.5a",
     "grunt-coffeelint": "0.0.6",
-    "grunt-contrib-coffee": "0.7.0"
+    "grunt-contrib-coffee": "0.7.0",
+    "grunt-contrib-watch":"0.3.1",
   }
 }
