--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "express":"3.2.0"
+    "express":"3.2.0",
+    "lodash":"1.2.0",
+    "request": "2.11.4"
   },
   "devDependencies": {
     "grunt": "0.4.1",
     "grunt-jslint":"0.2.5a",
     "grunt-coffeelint": "0.0.6",
     "grunt-contrib-coffee": "0.7.0",
-    "grunt-contrib-watch":"0.3.1",
+    "grunt-contrib-watch":"0.3.1"
   }
 }
