--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "devDependencies": {
     "grunt": "0.4.1",
-    "grunt-jslint":"0.2.5a",
+    "grunt-contrib-jshint":"0.4.3",
     "grunt-coffeelint": "0.0.6",
     "grunt-contrib-coffee": "0.7.0",
-    "grunt-contrib-watch":"0.3.1"
+    "grunt-contrib-watch":"0.3.1",
+    "grunt-contrib-compass":"0.2.0",
+    "grunt-contrib-copy":"0.4.1"
   }
 }
